# MCP-Server---Gmail-and-Doc

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
Doc/: context.md  problemstatement.txt
api/: index.py
docker/: Dockerfile
src/google_mcp_server/: __init__.py  config.py  server.py
src/google_mcp_server/auth/: __init__.py  oauth.py
src/google_mcp_server/docs/: __init__.py  service.py  tools.py
src/google_mcp_server/gmail/: __init__.py  service.py  tools.py
src/google_mcp_server/utils/: __init__.py  errors.py
tests/: __init__.py  test_auth.py  test_docs_tools.py  test_gmail_tools.py
