[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-mcp-server"
version = "0.1.0"
description = "A generic MCP server exposing Gmail and Google Docs as standardized tools for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "mcp>=1.27,<2",
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4.0",
]

[project.scripts]
google-mcp-server = "google_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/google_mcp_server"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
